syntax = "proto3";
option java_multiple_files = true;
package tech.lmru.auth.grpc.service.generated.impl;

message AuthorizationRequest{
    string name= 1;
    string pass = 2;
}

message AuthorizationResponse {
    bool authorize = 1;
}

message AuthenticationRequest{
    string name = 1;
    string pass = 2;
    string clientId= 3;
    string grantType = 4;
    string secret = 5;
}

message AccessToken {
    string jti =1;
    string token = 2;
}

service AuthorizeService {
    rpc authorize(AuthorizationRequest) returns (AuthorizationResponse);
}

service TokenService {
    rpc getToken(AuthenticationRequest) returns (AccessToken);
}
